--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<script src="constants/constants.js" type="text/javascript"></script>
 	<script src="controllers/novaCucaCtrl.js" type="text/javascript"></script>
 	<script src="controllers/minhaCucaCtrl.js" type="text/javascript"></script>
-	<script src="controllers/todosCtrl.js" type="text/javascript"></script>
+	<script src="controllers/principalCtrl.js" type="text/javascript"></script>
 	<script src="controllers/loginCtrl.js" type="text/javascript"></script>
 	<script src="controllers/cadastroCtrl.js" type="text/javascript"></script>
 	<script src="controllers/esqueceuSenhaCtrl.js" type="text/javascript"></script>
